IGNITE-16414 Sorted index spool produces wrong collation.